# StudentOfGames

./: .gitignore  Cargo.toml  INTEGRATION_TEST_REPORT.md  MODEL_SPECIFICATION_55_JOKER.md  NEURAL_DEMO.md  PARALLEL_UNSAFE.md  QUICKSTART.md  README.md  THREADING_AND_TESTING.md  TODO.txt  build.rs  obscuro_extracted.txt  pyproject.toml  rustc-ice-2025-08-27T14_35_39-7154.txt  thoughts.md  training_loss.csv
copilot/: ALGORITHM.md  COMPLETION_SUMMARY.md  EXECUTION_TRACES.md  IMPLEMENTATION.md  PSEUDOCODE_COMPARISON.md  QUICK_REFERENCE.md  README.md  STATUS.md  SUMMARY.md  cfr_plus.rs  example.rs  lib.rs  liblib.rlib  obscuro_algorithm.rs  obscuro_core.rs  safe_resolving.rs  subgame_solving.rs
copilot_updates/: IMPLEMENTATION_SUMMARY.md  NEURAL_INTEGRATION.md  TRAINING_GUIDE.md
deprecated/: liars_die_solver.py  obscuro.ml  temp.txt
deprecated/SoG/: SoG.py  fresh.rs
docs/: CHANGELOG.md  CORE.md  NEURAL.md  PARALLEL.md  PERFECT_INFO_RULES.md  README.md  USAGE.md
examples/: akq_training.rs  neural_demo.rs  train_example.rs
old/: obscuro.rs
old/SoG/: game_tree.rs  gt_cfr.rs
src/: SoG.py  SoG.rs  alpha_zero.rs  cfr.rs  config.rs  data.rs  evaluator.rs  fresh.rs  game.rs  game_tree.rs  gt_cfr.rs  history.rs  info.rs  lib.rs  main.rs  mcts.rs  minimax.rs  neural.rs  neural_demo.rs  neural_solver.rs  obscuro.rs  obscuro_parallel.rs  obscuro_threaded.rs  parallel_training.rs  policy.rs  search_statistics.rs  self_play.rs  student_of_games.rs  training.rs  types.rs  utils.rs
src/SoG/: alpha_zero.rs  game.rs  mcts.rs  search_statistics.rs  temp.txt
src/games/: AKQ.rs  TODO.md  mod.rs  (+9 more)
(+35 files in other folders)
