[package]
name = "StudentOfGames"
version = "0.1.0"
authors = ["Tate Staples <tatestap@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tch = "0.15.0"
rand = "0.8.5"
ordered-float = "4.2.0"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
chrono = "0.4.34"
log = "0.4.20"
env_logger = "0.11.2"
torch-sys = "0.15.0"
rand_distr = "0.4.3"
indicatif = "0.17.8"