[package]
name = "StudentOfGames"
version = "0.3.0"
authors = ["Tate Staples <tatestap@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
burn-import = "0.18"
[dependencies]
rand = "0.9.2"
log = "0.4.28"
burn = { version = "0.18.0", features = ["ndarray", "autodiff"] }